--- a/css/styles.css
+++ b/css/styles.css
@@ -1,248 +1,5 @@
-
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 60px;
-    background: #333;
-    color: #fff;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 1000;
-    /* Para garantir que o header fique acima dos outros elementos */
-}
-
-.logotipo h2 {
-    font-size: 24px;
-}
-
-.logotipo span {
-    color: #f39c12;
-}
-
-.navbar ul {
-    list-style: none;
-    display: flex;
-    gap: 20px;
-}
-
-.navbar ul li a {
-    text-decoration: none;
-    color: #fff;
-    font-size: 18px;
-    position: relative;
-    transition: color 0.3s;
-    padding: 10px 15px;
-    border-radius: 15px;
-}
-
-.navbar ul li a::after {
-    content: '';
-    position: absolute;
-    left: 50%;
-    bottom: -5px;
-    width: 0;
-    height: 3px;
-    background: #f39c12;
-    transition: all 0.3s ease-in-out;
-    transform: translateX(-50%);
-}
-
-.navbar ul li a:hover {
-    color: #f39c12;
-    background: rgba(255, 255, 255, 0.1);
-}
-
-.navbar ul li a:hover::after {
-    width: 100%;
-}
-
-.menu_mobile {
-    display: none;
-}
-
-.menu_toggle {
-    background: none;
-    border: none;
-    font-size: 28px;
-    color: #fff;
-    cursor: pointer;
-    transition: transform 0.3s;
-}
-
-.menu_toggle:hover {
-    transform: rotate(90deg);
-}
-
-.mobile_nav {
-    display: none;
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 50%;
-    height: 100vh;
-    background: rgba(51, 51, 51, 0.95);
-    padding: 20px;
-    height: 91vh;
-    margin-top: 9vh;
-    border-radius: 0 0 10px 10px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-    transform: translateX(100%);
-    transition: all 0.3s ease-in-out;
-}
-
-.mobile_nav.show {
-    display: block;
-    transform: translateX(0);
-}
-
-.mobile_nav li {
-    list-style: none;
-    padding: 15px 0;
-    text-align: center;
-}
-
-.mobile_nav li a {
-    text-decoration: none;
-    color: #fff;
-    font-size: 20px;
-    display: block;
-    transition: color 0.3s, background 0.3s;
-    padding: 12px;
-    border-radius: 10px;
-}
-
-.mobile_nav li a:hover {
-    color: #f39c12;
-    background: rgba(255, 255, 255, 0.1);
-}
-
-@media (max-width: 768px) {
-    .navbar {
-        display: none;
-    }
-
-    .menu_mobile {
-        display: block;
-    }
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.hero {
-    position: relative;
-    height: 100vh;
-    overflow: hidden;
-}
-
-.hero::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    
-    z-index: -1;
-    object-fit: cover;
-}
-
-.hero_content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: #fff;
-    text-align: center;
-    max-width: 800px;
-    padding: 20px;
-    background: rgba(0, 0, 0, 0.5);
-    /* Fundo escuro para o texto se destacar */
-}
-
-.hero_content p,
-.hero_content h1,
-.hero_content h2 {
-    margin: 10px 0;
-}
-
-.hero_content h1 {
-    font-size: 3rem;
-    font-weight: bold;
-}
-
-.hero_content h2 span {
-    display: block;
-    font-size: 1.5rem;
-    margin-top: 5px;
-}
-
-.hero_bottom {
-    position: absolute;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    text-align: center;
-}
-
-.hero_bottom .button a {
-    display: inline-block;
-    background-color: #ff5733;
-    color: #fff;
-    padding: 15px 30px;
-    font-size: 1.2rem;
-    text-decoration: none;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
-
-.hero_bottom .button a:hover {
-    background-color: #e14d2a;
-}
-
-.hero_social {
-    margin-top: 20px;
-}
-
-.hero_social a {
-    margin: 0 10px;
-    color: #fff;
-    font-size: 1.2rem;
-    text-decoration: none;
-}
-
-.hero_social a:hover {
-    color: #ff5733;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
